# AI-Driven-RF-Component-Failure-Root-Cause-Analysis-Diagnosis-System

./: .gitignore  README.md  pyproject.toml
layer1_data_ingestion/: config.py  feature_engineering.py  loaders.py  pipeline.py  preprocessor.py  schema_mapper.py
layer2_eda/: eda_ai4i.py  eda_cmapss.py  eda_runner.py  eda_secom.py  eda_unified.py
layer3_models/: base_model.py  cnn1d_model.py  ensemble.py  xgb_classifier.py
layer4_tracking/: hpo_optuna.py  mlflow_logger.py
layer5_explainability/: __init__.py  grad_cam.py  shap_explainer.py
layer6_knowledge_graph/: __init__.py  build_graph.py  recommender.py  shap_to_graph.py
models/: cnn1d_model.json  cnn1d_model.pt  ensemble_config.json  xgb_best_FD001_binary.json  xgb_best_FD001_binary.pkl  xgb_classifier.json  xgb_classifier_ai4i.json
notebooks/: 01_layer1_data_ingestion.ipynb  02_layer2_eda.ipynb  03_layer3_models.ipynb
outputs/eda/: eda_summary.json
outputs/explainability/shap/: diagnosis_report_0.json  diagnosis_report_1.json  diagnosis_report_2.json  diagnosis_report_3.json  diagnosis_report_4.json
outputs/knowledge_graph/: diagnosis_DUT_FD001_sample0_20260522_233752.json  diagnosis_DUT_FD001_sample0_20260522_234031.json  diagnosis_DUT_FD001_sample0_20260522_234333.json  knowledge_graph_interactive.html  rf_sentinel_knowledge_graph.gml
streamlit_app/: app.py
streamlit_app/pages/: 1_EDA_Explorer.py  2_RCA_Analyzer.py  3_Model_Compare.py  4_Knowledge_Graph.py  5_Live_Simulator.py
