[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rf-sentinel"
version = "0.1.0"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["layer1*", "layer2*", "layer3*", "layer4*", "layer5*", "layer6*", "streamlit_app*"]
